--- a/style.css
+++ b/style.css
@@ -2,11 +2,20 @@
     width: 100px;
     height: 100px;
     border: 1px solid red;
+    transition: 4s;
+}
+
+.ex-1-square:hover {
+    background-color: red;
 }
 .ex-2-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: width ease 3s;
+}
+.ex-2-square:hover {
+    width: 100%;
 }
 .ex-3-square {
     width: 100px;
