--- a/style.css
+++ b/style.css
@@ -58,6 +58,18 @@
     width: 500px;
 }
 
+.ex-6-img:hover {
+    filter: grayscale(1);
+}
+
+.ex-7-img {
+    transition: 4s;
+}
+
+.ex-7-img:hover {
+    filter: brightness(0.5);
+    filter: invert(0.8);
+}
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
