--- a/style.css
+++ b/style.css
@@ -97,9 +97,42 @@
 
 .ex-10-icon {
     font-size: 60px;
+    animation-duration: 5s;
+    animation-name: charge;
 }
+
+    @keyframes charge {
+    from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
 .ex-11-icon {
-    font-size: 60px;
+    font-size: 60px;    
+}
+.ex-11-icon:hover {
+    animation-duration: 10s;
+    animation-name: charge2;
+}
+@keyframes charge2 {
+    0 {
+        transform: rotate(0deg);
+      }
+    25% {
+        transform: rotate(90deg);
+      }
+    50% {
+        transform: rotate(180deg);
+        }
+    75% {
+        transform: rotate(270deg)
+    }  
+    0 {
+        transform: rotate(0deg);
+    }
 }
 .ex-12-button, .ex-13-button {
     position: relative;
