--- a/style.css
+++ b/style.css
@@ -97,8 +97,7 @@
 
 .ex-10-icon {
     font-size: 60px;
-    animation-duration: 5s;
-    animation-name: charge;
+    animation: charge 5s linear infinite;
 }
 
     @keyframes charge {
@@ -116,6 +115,7 @@
 .ex-11-icon:hover {
     animation-duration: 10s;
     animation-name: charge2;
+    animation-timing-function: ease-in;
 }
 @keyframes charge2 {
     0 {
@@ -162,4 +162,92 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+
+.ex-12-button:hover .ex-12-top-white {
+    animation: movetop 2s ease-in;
+}
+@keyframes movetop {
+    0% {
+        left: 10%;
+    }
+    50% {
+        left: calc(100% - 60px);
+    }
+    100% {
+        left: 10%;
+    }
+}
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: movebottom 2s ease-in;
+}
+@keyframes movebottom {
+    0% {
+        right: 20%;
+    }
+    50% {
+        right: calc(100% - 60px);
+    }
+    100% {
+        right: 20%;
+    }
+}
+
+.ex-13-button:hover .ex-13-top-white {
+    animation: movetop 2s linear infinite;
+}
+@keyframes movetop {
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+    30% {
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+    45% {
+        left: calc(100% - 30px);
+        top: 100%;
+    }
+    75% {
+        left: 0;
+        top: 100%;
+    }
+    90% {
+        left: -15px;
+        top: -10px;
+    }
+    100% {
+        left: 10%;
+        top: -10px;
+    }
+}
+.ex-13-button:hover .ex-13-bottom-white {
+    animation: movebottom 2s linear infinite;
+}
+@keyframes movebottom {
+    0% {
+        bottom: -10px;
+        right: 20%;
+    }
+    30% {
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+    45% {
+        right: calc(100% - 30px);
+        bottom: 100%;
+    }
+    75% {
+        right: 0;
+        bottom: 100%;
+    }
+    90% {
+        right: -15px;
+        bottom: -10px;
+    }
+    100% {
+        bottom: -10px;
+        right: 20%;
+    }
 }
